Сonfigure data storage in the database PostgreSql. Create compose.yaml file for container management. Add layers DAL, DTO for the user, post and image model. Change the layers controller and service in accordance with the new data storage model.