@@ -1,11 +1,17 @@
 package ru.yandex.practicum.catsgram.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
+import ru.yandex.practicum.catsgram.dal.ImageRepository;
+import ru.yandex.practicum.catsgram.dal.PostRepository;
+import ru.yandex.practicum.catsgram.dto.ImageDto;
+import ru.yandex.practicum.catsgram.dto.ImageUploadResponse;
 import ru.yandex.practicum.catsgram.exception.ImageFileException;
 import ru.yandex.practicum.catsgram.exception.NotFoundException;
+import ru.yandex.practicum.catsgram.mapper.ImageMapper;
 import ru.yandex.practicum.catsgram.model.Image;
 import ru.yandex.practicum.catsgram.model.ImageData;
 import ru.yandex.practicum.catsgram.model.Post;
@@ -15,54 +21,50 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Instant;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ImageService {
-    private final PostService postService;
-    private final Map<Long, Image> images = new HashMap<>();
+    private final PostRepository postRepository;
+    private final ImageRepository imageRepository;
     //@Value("${catsgram.image-directory}")
     private String imageDirectory = "C:\\Users\\oksan\\Downloads\\CatsgramImages";
 
-    public List<Image> getPostImages(long postId) {
-        return images.values()
+
+    public List<ImageDto> getPostImages(long postId) {
+        return imageRepository.findByPostId(postId)
                 .stream()
-                .filter(image -> image.getPostId() == postId)
-                .collect(Collectors.toList());
+                .map(image -> {
+                    byte[] bytes = loadFile(image);
+                    return ImageMapper.mapToImageDto(image, bytes);
+                })
+                .toList();
     }
 
-    public List<Image> saveImages(long postId, List<MultipartFile> files) {
+    public List<ImageUploadResponse> saveImages(long postId, List<MultipartFile> files) {
         return files.stream()
                 .map(file -> saveImage(postId, file))
                 .collect(Collectors.toList());
     }
 
     public ImageData getImageData(long imageId) {
-        if (!images.containsKey(imageId)) {
-            throw new NotFoundException(String.format("Image with id = %d not found", imageId));
-        }
-        Image image = images.get(imageId);
+        Image image = imageRepository.findById(imageId).orElseThrow(() -> new NotFoundException("Image witn id " + imageId + "not found"));
         byte[] data = loadFile(image);
         return new ImageData(data, image.getOriginalFileName());
     }
 
-    private Image saveImage(long postId, MultipartFile file) {
-        Post post = postService.findPostPerId(postId).orElseThrow(() -> new NotFoundException(
-                String.format("Post with id = %d not found", postId)));
+    private ImageUploadResponse saveImage(long postId, MultipartFile file) {
+        Post post = postRepository.findById(postId)
+                .orElseThrow(() -> new NotFoundException("Post with " + postId + " not found"));
+
         Path filePath = saveFile(file, post);
+        Image image = ImageMapper.mapToImage(postId, filePath, file.getOriginalFilename());
+        image = imageRepository.saveImage(image);
 
-        Image image = new Image();
-        image.setId(getNextId());
-        image.setFilePath(filePath.toString());
-        image.setPostId(post.getId());
-        image.setOriginalFileName(file.getOriginalFilename());
-
-        images.put(image.getId(), image);
-        return image;
+        return ImageMapper.mapToImageUploadResponse(image);
     }
 
     private Path saveFile(MultipartFile file, Post post) {
@@ -95,14 +97,5 @@ public class ImageService {
             throw new ImageFileException(String.format("Not found file.  Id: %d, name: %s", image.getId(),
                     image.getOriginalFileName()));
         }
-    }
-
-    private long getNextId() {
-        long currentMaxId = images.keySet()
-                .stream()
-                .mapToLong(id -> id)
-                .max()
-                .orElse(0);
-        return ++currentMaxId;
     }
 }
